--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -1,6 +1,6 @@
 $main-color: #18347e;
 $light-main-color: rgba(24, 52, 126, 0.7);
-$lightly-main-color: #2248b3;
+$lightly-main-color: #275ff8;
 
 $bg-color: #e5e5e5;
 // dashboard
